--- a/ak8s/foods-deployment.yaml
+++ b/ak8s/foods-deployment.yaml
@@ -6,12 +6,12 @@ spec:
   replicas: 1
   selector:
     matchLabels:
-      component: foods-rest
+      component: rest-server
   template:
     metadata:
       name: foods-rest-client-pod
       labels:
-        component: foods-rest
+        component: rest-server
     spec:
       containers:
         - name: foods-rest-server
@@ -19,17 +19,4 @@ spec:
           ports:
             - containerPort: 5000
               protocol: TCP
-
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: foods-rest-service
-spec:
-  selector:
-    component: foods-rest
-  ports:
-  - name: cars-rest-port
-    protocol: TCP
-    port: 5002
-    targetPort: 5000
+              name: foods-rest-srv
